# eth_supermegabot

summer_school_private/my_robot_base/include/: my_robot_hw_interface.h
summer_school_private/my_robot_base/launch/: hw_control.launch
summer_school_private/my_robot_base/src/: my_robot_base.cpp
summer_school_private/smb_controller_v2/: CMakeLists.txt  package.xml
summer_school_private/smb_controller_v2/include/smb_controller_v2/: smb_controller_v2.hpp
summer_school_private/smb_controller_v2/smb_controller_v2/config/: my_robot_common.yaml  my_robot_control.yaml  smb_controller_config.yaml
summer_school_private/smb_controller_v2/smb_controller_v2/config/urdf/: smb.urdf.xacro  smb_reduced.urdf
summer_school_private/smb_controller_v2/smb_controller_v2/include/smb_controller_v2/: smb_controller_v2.hpp
summer_school_private/smb_controller_v2/smb_controller_v2/launch/: control.launch  controller_tf_move_base.launch  my_robot_control.launch
summer_school_private/smb_controller_v2/smb_controller_v2/src/: smb_controller_v2_node.cpp
summer_school_private/smb_controller_v2/smb_controller_v2/src/smb_controller_v2/: smb_controller_v2.cpp
summer_school_private/smb_controller_v2/smb_controller_v2/urdf/: my_robot.xacro  sensors.xacro
summer_school_private/smb_controller_v2/smb_driver/: CMakeLists.txt
summer_school_private/smb_controller_v2/smb_driver/include/smb_driver/: SmbController.h
summer_school_private/smb_controller_v2/smb_driver/src/: SmbController.cpp
summer_school_private/smb_controller_v2/src/: smb_controller_v2_node.cpp
summer_school_private/smb_controller_v2/src/smb_controller_v2/: smb_controller_v2.cpp
summer_school_private/smb_lowlevel_controller/smb_driver/src/: SmbController.cpp
summer_school_private/smb_lowlevel_controller/smb_lowlevel_controller/include/smb_lowlevel_controller/: SmbLowLevelControllerInterface.tpp
